--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Setup Google Cloud
-      uses: google-github-actions/setup-gcloud@v1
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
       with:
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-        project_id: pitch-elvarika
+        credentials_json: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      
     - name: Configure Docker
       run: gcloud auth configure-docker
       
