--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,15 @@ on:
 env:
   PROJECT_ID: pitch-elvarika
   REGION: us-central1
+  SERVICE_NAME: elvarika-backend
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
     
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v1
@@ -26,10 +28,13 @@ jobs:
     - name: Configure Docker
       run: gcloud auth configure-docker
       
-    - name: Build and Deploy Backend
+    - name: Deploy to Cloud Run
       run: |
-        cd server
-        gcloud run deploy elvarika-backend \
+        gcloud run deploy ${{ env.SERVICE_NAME }} \
           --source . \
-          --region us-central1 \
-          --allow-unauthenticated
+          --region ${{ env.REGION }} \
+          --project ${{ env.PROJECT_ID }} \
+          --allow-unauthenticated \
+          --port 5000 \
+          --memory 512Mi \
+          --cpu 1
