--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist --define:process.env.NODE_ENV='\"production\"'",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
+    "dev": "tsx server/dev.ts",
+    "build": "vite build && tsc --project tsconfig.build.json",
+    "start": "node dist/prod.js",
+    "check": "tsc --noEmit",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
